--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -83,6 +83,12 @@
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
+            <h3>The Body Shop</h3>
+            <p>Shopping Iguatemi</p>
+            <p>Clique <a href="https://www.instagram.com/lojathebodyshop.fortaleza?igsh=MTVwMGEwNHFxeGRvdA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Aroma de Nuvem</h3>
             <p>Clique <a href="https://instagram.com/aromadenuvem?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
                 visitar o Instagram da loja.</p>
@@ -112,14 +118,18 @@
             <p>Clique <a href="https://www.instagram.com/produtos.naturalis?igsh=b2k0MzY3eWNtc2Jk"
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
+
         <br>
+
         <h1 class="titulos-categorias">Salões de Beleza</h1>
         <section class="lojas">
             <h3>Renata Andrade Beauty</h3>
             <p>Clique <a href="https://www.instagram.com/randradebeauty?igsh=MWs3b2E0cWd6NTM1Mg=="
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
+
         <br>
+
         <h1 class="titulos-categorias">Produtos de Limpeza</h1>
         <section class="lojas">
             <h3>HK Eco</h3>
