--- a/onde-comer.html
+++ b/onde-comer.html
@@ -165,6 +165,8 @@
                         Café</a> (Iguatemi, RioMar e aeroporto)</li>
                 <li><a href="https://www.instagram.com/spoleto_oficial?igsh=ZTl4NWl5a29vNnFu"
                         target="_blank">Spoleto</a> (Tem em vários shoppings)</li>
+                <li><a href="https://www.instagram.com/lapastagiallafortaleza?igsh=cWd5OGM5OGR1b240" target="_blank">La
+                    Pasta Gialla</a> (Iguatemi, Pátio Dom Luís)</li>
                 <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco
                         Bambu</a></li>
 
