--- a/onde-comer.html
+++ b/onde-comer.html
@@ -246,6 +246,8 @@
             <ul>
                 <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA=="
                         target="_blank">Ventana</a></li>
+                <li><a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">Nüsse Café</a></li>
                 <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://www.instagram.com/subwaybrasil?igsh=MXVsMGdidjdieTdlNw=="
                         target="_blank">Subway</a> (Tem em vários shoppings)</li>
@@ -307,6 +309,8 @@
         <section class="lojas">
             <h2>Risoto!</h2>
             <ul>
+                <li><a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">Nüsse Café</a></li>
                 <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco
                         Bambu</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa
