--- a/festas.html
+++ b/festas.html
@@ -47,6 +47,7 @@
         <section class="lojas">
             <h3>Veg Livre</h3>
             <p>Salgadinhos, docinhos e bolos.</p>
+            <p>Endereço: Rua Elcias Lopes, 331 - Itaoca.</p>
             <p>Clique <a href="https://instagram.com/veglivre?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
                 visitar o Instagram da loja.</p>
         </section>
