--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -58,6 +58,13 @@
                 visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
+            <h3>Veg Livre</h3>
+            <p>Salgadinhos, docinhos e bolos.</p>
+            <p>Endereço: Rua Elcias Lopes, 331 - Itaoca.</p>
+            <p>Clique <a href="https://instagram.com/veglivre?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>XBloom</h3>
             <p>Endereço: Shopping Iguatemi</p>
             <p>Clique <a href="https://www.instagram.com/bloomfastgood?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a>
