--- a/emporios.html
+++ b/emporios.html
@@ -61,15 +61,13 @@
         </section>
         <section class="lojas">
             <h3>Soul Veg</h3>
-            <p>Quiosque com produtos veganos no shopping RioMar.</p>
-            <p>Endereço: Shopping RioMar - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/amosoulveg?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
                 visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
             <h3>Lila</h3>
             <p>Antepastos e geleias.</p>
-            <p>Endereço: Shopping RioMar - Fortaleza</p>
+            <p>Endereço: Rua Mário Mamede, 384 - Fortaleza</p>
             <p>Clique <a href="https://www.instagram.com/lila.natural?igsh=MXczY3FhdzJxY2F1ZA=="
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
