--- a/onde-comer.html
+++ b/onde-comer.html
@@ -59,8 +59,6 @@
                         target="_blank">Afranio's Napoletan</a></li>
                 <li><a href="https://www.instagram.com/unapastaoficial?igsh=MTBnOTFldXg0MDR4cA==" target="_blank">Una
                         Pasta</a></li>
-                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA=="
-                        target="_blank">Pachamama</a></li>
                 <li><a href="https://www.instagram.com/emnomedapizza?igsh=bjk5b2U4bzYyZnhw" target="_blank">Em Nome da
                         Pizza</a></li>
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La
@@ -131,8 +129,6 @@
         <section class="lojas">
             <h2>Lasanha!</h2>
             <ul>
-                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA=="
-                        target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi</a>
                     (Opção no RioMar)</li>
                 <li><a href="https://instagram.com/pastificiogrigoline?igshid=MzRlODBiNWFlZA=="
@@ -226,8 +222,6 @@
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==">Bike Vegan</a></li>
                 <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Haed</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==">GoVegan</a></li>
-                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA=="
-                        target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/garagemburguerbar?igshid=MzRlODBiNWFlZA==">Garagem Burguer Bar</a>
                 </li>
                 <li><a href="https://instagram.com/vaniaburgers?igshid=YTQwZjQ0NmI0OA==" target="_blank">Vânia
@@ -258,8 +252,6 @@
         <section class="lojas">
             <h2>Petiscos!</h2>
             <ul>
-                <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA=="
-                        target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/lajehead?igshid=MzRlODBiNWFlZA==" target="_blank">Laje Haed</a></li>
                 <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://instagram.com/verduracozinha?igshid=YTQwZjQ0NmI0OA==" target="_blank">Verdura
@@ -364,6 +356,8 @@
                 <li><a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi">Torra</a></li>
                 <li><a href="https://www.instagram.com/lapastagiallafortaleza?igsh=cWd5OGM5OGR1b240" target="_blank">La
                         Pasta Gialla</a></li>
+                <li><a href="https://www.instagram.com/lepainlecafe?igsh=NmtoaXZyNm5pdTFs" target="_blank">Le 
+                        Pain Le Café</a></li>
             </ul>
         </section>
         <section class="lojas">
