--- a/cafes.html
+++ b/cafes.html
@@ -115,6 +115,13 @@
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
+            <h3>Nupê Café</h3>
+            <p>Algumas opções de lanche vegano e opção de leite vegetal.</p>
+            <p>Endereço: Avenida Deputado Oswaldo Studart, 370 - Bairro de Fátima.</p>
+            <p>Clique <a href="https://www.instagram.com/nupecafe?igsh=bGdqYXUwZXVueGIx"
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Keopi</h3>
             <p>Algumas opções de lanche vegano e opção de leite vegetal.</p>
             <p>Endereço: Avenida Deputado Oswaldo Studart, 370 - Bairro de Fátima.</p>
