--- a/onde-comer.html
+++ b/onde-comer.html
@@ -229,6 +229,9 @@
                 <li><a href="https://instagram.com/corafortaleza?igshid=MzRlODBiNWFlZA==" target="_blank">Cora</a></li>
                 <li><a href="https://instagram.com/owlbeerpub?igshid=MzRlODBiNWFlZA==" target="_blank">Owl Beer Pub</a>
                 </li>
+                <li><a href="https://www.instagram.com/hentsburg?igsh=bDk2OTllZXlsbmNz" target="_blank">Hents
+                        Burg
+                </a></li>
                 <li><a href="https://www.instagram.com/orbitabluebar?igsh=MWN2emU3azZqejJ2cQ==" target="_blank">Órbita
                         Blue</a> (Opção na Praia do Futuro)</li>
                 <li><a href="https://www.instagram.com/heyjoefoodnbar?igsh=MXZkdmc3c3pnajE3OA==" target="_blank">Hey
