--- a/onde-comer.html
+++ b/onde-comer.html
@@ -337,6 +337,7 @@
         <section class="lojas">
             <h2>Salada!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/oi.falafelbox?igsh=MTR3eGk5Z2ZlaGhkbQ==">Falafel Box</a></li>
                 <li><a href="https://www.instagram.com/cacao.fresh?igsh=c28xc2Q5Zmkxb2tt">Cacao Fresh</a>(Opção no
                     Iguatemi)</li>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
@@ -374,6 +375,7 @@
         <section class="lojas">
             <h2>Comida Árabe!</h2>
             <ul>
+                <li><a href="https://www.instagram.com/oi.falafelbox?igsh=MTR3eGk5Z2ZlaGhkbQ==">Falafel Box</a></li>
                 <li><a href="https://www.instagram.com/lazizarabicfood?igsh=MWM2aGU3MWgxOGx4dg==">Laziz Arabic Food</a>
                 </li>
                 <li><a href="https://www.instagram.com/comidaarabefortaleza?igsh=MWJpYWcza3RwM29kZw=="
