Atualizei restaurantes e lanchonetes

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -87,6 +87,12 @@
                 para visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
+            <h3>Liva</h3>
+            <p>Endereço: Rua João Carvalho, 775 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/livavidavegana?igsh=dTZqNTYxaTJ3MjFx" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Buendia</h3>
             <p>Almoço delivery.</p>
             <p>Clique <a href="https://instagram.com/buendiacomidavegana?igshid=MzRlODBiNWFlZA=="
