Atualizei lanchonetes e onde comer

--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -85,6 +85,12 @@
                 visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
+            <h3>Alvo Veg</h3>
+            <p>Coxinhas.</p>
+            <p>Clique <a href="https://www.instagram.com/alvo.veg?igsh=MXBoM3RqbnM5bzdqMA==" target="_blank">AQUI</a> para
+                visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Ri Veg</h3>
             <p>Espadinhas veganas e sem glúten.</p>
             <p>Clique <a href="https://instagram.com/riveggie?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
