--- a/onde-comer.html
+++ b/onde-comer.html
@@ -162,7 +162,7 @@
                 <li><a href="https://www.instagram.com/spoleto_oficial?igsh=ZTl4NWl5a29vNnFu"
                         target="_blank">Spoleto</a> (Tem em vários shoppings)</li>
                 <li><a href="https://www.instagram.com/lapastagiallafortaleza?igsh=cWd5OGM5OGR1b240" target="_blank">La
-                    Pasta Gialla</a> (Iguatemi, Pátio Dom Luís)</li>
+                        Pasta Gialla</a> (Iguatemi, Pátio Dom Luís)</li>
                 <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco
                         Bambu</a></li>
 
@@ -186,6 +186,9 @@
             <ul>
                 <li><a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">Rango
                         Verde</a></li>
+                <li>
+                    <a href="https://www.instagram.com/alvo.veg?igsh=MXBoM3RqbnM5bzdqMA==">Alvo Veg</a>
+                </li>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a>
                 </li>
                 <li><a href="https://www.instagram.com/lifealimentacaoinclusiva?igsh=MWEzbHBjbzA1cXI4ZA=="
@@ -231,7 +234,7 @@
                 </li>
                 <li><a href="https://www.instagram.com/hentsburg?igsh=bDk2OTllZXlsbmNz" target="_blank">Hents
                         Burg
-                </a></li>
+                    </a></li>
                 <li><a href="https://www.instagram.com/orbitabluebar?igsh=MWN2emU3azZqejJ2cQ==" target="_blank">Órbita
                         Blue</a> (Opção na Praia do Futuro)</li>
                 <li><a href="https://www.instagram.com/heyjoefoodnbar?igsh=MXZkdmc3c3pnajE3OA==" target="_blank">Hey
@@ -243,8 +246,8 @@
             <ul>
                 <li><a href="https://www.instagram.com/ventanaroseletejada?igsh=MTYzNzZxeHNzYms3bA=="
                         target="_blank">Ventana</a></li>
-                <li><a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA=="
-                    target="_blank">Nüsse Café</a></li>
+                <li><a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">Nüsse Café</a>
+                </li>
                 <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
                 <li><a href="https://www.instagram.com/subwaybrasil?igsh=MXVsMGdidjdieTdlNw=="
                         target="_blank">Subway</a> (Tem em vários shoppings)</li>
@@ -304,8 +307,8 @@
         <section class="lojas">
             <h2>Risoto!</h2>
             <ul>
-                <li><a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA=="
-                    target="_blank">Nüsse Café</a></li>
+                <li><a href="https://instagram.com/nusse.cafe?igshid=MzRlODBiNWFlZA==" target="_blank">Nüsse Café</a>
+                </li>
                 <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco
                         Bambu</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa
@@ -342,6 +345,7 @@
                     Iguatemi)</li>
                 <li><a href="https://instagram.com/verdelimarestaurante?igshid=MzRlODBiNWFlZA==">Verdelima</a></li>
                 <li><a href="https://instagram.com/saladeria?igshid=YTQwZjQ0NmI0OA==" target="_blank">Saladeria</a></li>
+                <li><a href="https://www.instagram.com/loft.gastrojazz?igsh=dG0weXd0OHpuMjQ2">Loft</a></li>
                 <li><a href="https://www.instagram.com/atelier1913?igsh=NjR5NnhkZmhjZDV3" target="_blank">Atelier
                         1913</a></li>
                 <li><a href="https://www.instagram.com/sooveggiebr?igsh=MWtnaGUyZHl6NDBo">SooVeggie</a></li>
@@ -360,7 +364,7 @@
                 <li><a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi">Torra</a></li>
                 <li><a href="https://www.instagram.com/lapastagiallafortaleza?igsh=cWd5OGM5OGR1b240" target="_blank">La
                         Pasta Gialla</a></li>
-                <li><a href="https://www.instagram.com/lepainlecafe?igsh=NmtoaXZyNm5pdTFs" target="_blank">Le 
+                <li><a href="https://www.instagram.com/lepainlecafe?igsh=NmtoaXZyNm5pdTFs" target="_blank">Le
                         Pain Le Café</a></li>
             </ul>
         </section>
