--- a/onde-comer.html
+++ b/onde-comer.html
@@ -143,6 +143,7 @@
                 <li><a href="https://www.instagram.com/casulogastrobar?igsh=MWw2d2ZkN2R2YWJiYw=="
                         target="_blank">Casulo</a></li>
                 <li><a href="https://instagram.com/tipo.cafe?igshid=YTQwZjQ0NmI0OA==" target="_blank">Tipo Café</a></li>
+                <li><a href="https://www.instagram.com/loft.gastrojazz?igsh=dG0weXd0OHpuMjQ2">Loft</a></li>
                 <li><a href="https://instagram.com/casabearestaurante?igshid=MzRlODBiNWFlZA==" target="_blank">Casa
                         Beá</a></li>
                 <li><a href="https://instagram.com/cozinhamamma_lu?igshid=MzRlODBiNWFlZA==" target="_blank">Cozinha da
