Atualizei o site apagando restaurantes obsoletos e adicionando lugares novos

--- a/cafes.html
+++ b/cafes.html
@@ -136,6 +136,13 @@
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
+            <h3>Amika</h3>
+            <p>Opção de substituição do leite animal por leite vegetal.</p>
+            <p>Endereço: Avenida Desembargador Moreira, 2689 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/amikacoffee?igsh=MW4yZmxieWtlbzEzaQ==" target="_blank">AQUI</a>
+                para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
             <h3>Atelier 1913</h3>
             <p>Opção de substituição do leite animal por leite vegetal.</p>
             <p>Endereço: Rua Antônio Augusto, 744 - Fortaleza</p>
