--- a/dicas.html
+++ b/dicas.html
@@ -64,6 +64,8 @@
                                 <li><a href="https://instagram.com/portaldoorganico?igshid=YmMyMTA2M2Y="
                                                 target="_blank">Portal do
                                                 Orgânico</a></li>
+                                <li><a href="https://www.instagram.com/origem.mercado?igsh=MXI4dnJucXowc3lneQ=="
+                                                target="_blank">Origem Orgânicos</a></li>
                                 <li><a href="https://instagram.com/lafeiraorganica?igshid=YmMyMTA2M2Y="
                                                 target="_blank">La Feira
                                                 Orgânica</a></li>
