--- a/onde-comer.html
+++ b/onde-comer.html
@@ -164,6 +164,8 @@
                         target="_blank">Spoleto</a> (Tem em vários shoppings)</li>
                 <li><a href="https://www.instagram.com/lapastagiallafortaleza?igsh=cWd5OGM5OGR1b240" target="_blank">La
                         Pasta Gialla</a> (Iguatemi, Pátio Dom Luís)</li>
+                <li><a href="https://www.instagram.com/lemarchefortaleza?igsh=MTBza2t4bWVrNmp3ZQ==" target="_blank">Le
+                        Marché</a></li>
                 <li><a href="https://www.instagram.com/cocobambuoficial?igsh=eTY5OXg2aTc1Zmpi" target="_blank">Coco
                         Bambu</a></li>
 
@@ -274,6 +276,8 @@
                 </li>
                 <li><a href="https://www.instagram.com/barracacabumba?igsh=NWZnY3ZnbmR5MnUy" target="_blank">Barraca
                         Cabumba</a> (Opção na Praia do Futuro)</li>
+                <li><a href="https://www.instagram.com/greenbeer_fortaleza?igsh=MXJhNW9oZ3JwZ3UycQ=="
+                        target="_blank">Green Beer</a></li>
             </ul>
         </section>
         <section class="lojas">
