Atualizei seção de antepastos

--- a/emporios.html
+++ b/emporios.html
@@ -45,6 +45,8 @@
     <main>
         <p>Sessão destinada para divulgação de empórios especializados em embutidos e produtos industrializados veganos.
         </p>
+        <br>
+        <h1 class="titulos-categorias">Empórios</h1>
         <section class="lojas">
             <h3>The Veggies On The Table</h3>
             <p>Empório especializado em proteínas e "carnes" vegetarianas.</p>
@@ -65,13 +67,6 @@
                 visitar o Instagram da loja.</p>
         </section>
         <section class="lojas">
-            <h3>Lila</h3>
-            <p>Antepastos e geleias.</p>
-            <p>Endereço: Rua Mário Mamede, 384 - Fortaleza</p>
-            <p>Clique <a href="https://www.instagram.com/lila.natural?igsh=MXczY3FhdzJxY2F1ZA=="
-                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
-        </section>
-        <section class="lojas">
             <h3>Holos Poder de Nutrir</h3>
             <p>Clique <a href="https://www.instagram.com/holospoderdenutrir?igsh=emVvaHp1OGxiMGtt"
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
@@ -80,6 +75,39 @@
             <h3>Veg Inclui</h3>
             <p>Clique <a href="https://www.instagram.com/veginclui?igsh=MWJ5OGdoaHoxMjZsbQ==" target="_blank">AQUI</a>
                 para visitar o Instagram da loja.</p>
+        </section>
+        <br>
+        <h1 class="titulos-categorias">Antepastos, Molhos, Geleias</h1>
+        <section class="lojas">
+            <h3>Lila</h3>
+            <p>Antepastos e geleias.</p>
+            <p>Endereço: Rua Mário Mamede, 384 - Fortaleza</p>
+            <p>Clique <a href="https://www.instagram.com/lila.natural?igsh=MXczY3FhdzJxY2F1ZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
+            <h3>Natuleia</h3>
+            <p>Geleias.</p>
+            <p>Clique <a href="https://www.instagram.com/natuleia_?igshid=YTQwZjQ0NmI0OA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
+            <h3>Naturaliza</h3>
+            <p>Antepastos veganos.</p>
+            <p>Clique <a href="https://instagram.com/naturalizafoods?igshid=MzRlODBiNWFlZA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
+            <h3>Amalá</h3>
+            <p>Antepastos.</p>
+            <p>Clique <a href="https://www.instagram.com/comidaamala?igsh=MWs3bTNsNzY1ZzlhcA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </section>
+        <section class="lojas">
+            <h3>Vale da Biodiversidade</h3>
+            <p>Antepastos e molhos.</p>
+            <p>Clique <a href="https://instagram.com/valedabiodiversidade?igshid=YTQwZjQ0NmI0OA=="
+                    target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
     </main>
 
