Correções de endereços

--- a/cafes.html
+++ b/cafes.html
@@ -96,7 +96,7 @@
         <section class="lojas">
             <h3>Torra</h3>
             <p>Cappuccino, chás variados e uma opção de bruschetta.</p>
-            <p>Endereço: Rua Marcos Macêdo, 827 - Fortaleza</p>
+            <p>Endereço: Rua Sabino Pires, 17 - Fortaleza</p>
             <p>Clique <a href="https://www.instagram.com/amotorracafe?igsh=OTQxc3pwdzRwcWpi" target="_blank">AQUI</a>
                 para visitar o Instagram da loja.</p>
         </section>
@@ -110,7 +110,7 @@
         <section class="lojas">
             <h3>Nupê Café</h3>
             <p>Algumas opções de lanche vegano e opção de leite vegetal.</p>
-            <p>Endereço: Avenida Deputado Oswaldo Studart, 370 - Bairro de Fátima.</p>
+            <p>Endereço: Rua Coronel Jucá, 537 - Fortaleza.</p>
             <p>Clique <a href="https://www.instagram.com/nupecafe?igsh=bGdqYXUwZXVueGIx"
                     target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </section>
@@ -150,7 +150,7 @@
                 para visitar o Instagram da loja.</p>
         </section>
     </main>
-
+    
     <script>
         function clickMenu() {
             if (menu.style.display == 'block') {
