--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -92,7 +92,7 @@
         </section>
         <section class="lojas">
             <h3>Ri Veg</h3>
-            <p>Espadinhas veganas e sem glúten.</p>
+            <p>Empadinhas veganas e sem glúten.</p>
             <p>Clique <a href="https://instagram.com/riveggie?igshid=YTQwZjQ0NmI0OA==" target="_blank">AQUI</a> para
                 visitar o Instagram da loja.</p>
         </section>
