Mudança no texto do modal

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <h2>Site Atualizado</h2>
             <hr>
             <h3>Atenção!!!</h3>
-            <p>O endereço do nosso site mudou!</p>
-            <p>Acesse o novo site <a href="https://bizu-vegano.web.app/">clicando aqui</a>.</p>
+            <p>Nosso endereço mudou!</p>
+            <p>Acesse o site atualizado <a href="https://bizu-vegano.web.app/">clicando aqui</a>.</p>
         </div>
     </div>    
 
